Fix dark mode shadows: always use black instead of currentColor/var(--color)
In dark mode, --color becomes light gray (221 221 221) and currentColor
resolves to the text color (also light). This makes shadows light/invisible
against the dark background.

Shadows should always be black regardless of color scheme:
- tailwind.css: --shadow/--shadow-lg use 'black' instead of 'currentColor'
- _definitions.scss: box-shadow CSS vars use 'rgb(0 0 0)' instead of 'var(--color)'
- _definitions.scss: box-shadow() function defaults to 'rgb(0 0 0)'

--- a/app/javascript/stylesheets/_definitions.scss
+++ b/app/javascript/stylesheets/_definitions.scss
@@ -140,7 +140,7 @@ $z-indices: (
   @return rgb(var(--#{$name}));
 }
 
-@function box-shadow($index, $color: full-color(color)) {
+@function box-shadow($index, $color: rgb(0 0 0)) {
   @return nth($box-shadows, $index) $color;
 }
 
@@ -163,7 +163,7 @@ $light-body-bg: #f4f4f0 !default;
     --border-radius-#{$i}: #{nth($border-radii, $i)};
   }
   @for $i from 1 through length($box-shadows) {
-    --box-shadow-#{$i}: #{nth($box-shadows, $i)} var(--color);
+    --box-shadow-#{$i}: #{nth($box-shadows, $i)} rgb(0 0 0);
   }
   @each $name, $z-index in $z-indices {
     --z-index-#{$name}: #{$z-index};
